<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="cont">Continue</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="menu_search">Search</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_new_bookmark">New Connection</string>
    <string name="menu_app_settings">Settings</string>
    <string name="menu_title_bookmark">Connection</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="bookmark_export">Share</string>
    <string name="export_failed">Failed to share bookmark</string>
    <string name="menu_sys_keyboard">Keyboard</string>
    <string name="menu_ext_keyboard">Function Keys</string>
    <string name="menu_touch_pointer">Touch Pointer</string>
    <string name="menu_home">home</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="section_bookmarks">Manual Connections</string>
    <string name="section_active_sessions">Active Sessions</string>
    <string name="search_hint">Connect to Computer</string>
    <string name="quick_connect_to">Connect to: %s</string>
    <string name="list_placeholder_login">Log in</string>
    <string name="list_placeholder_no_servers">No Servers</string>
    <string name="list_placeholder_connecting">Connecting &#8230;</string>
    <string name="list_placeholder_disconnecting">Disconnecting &#8230;</string>
    <string name="list_placeholder_connection_error">Connection Lost</string>
    <string name="list_placeholder_wrong_password">Wrong Password</string>
    <string name="list_placeholder_invalid_username">Invalid Username</string>
    <string name="list_placeholder_add_bookmark">Add Connection</string>
    <string name="settings_cat_host">Host</string>
    <string name="settings_label">Label</string>
    <string name="settings_hostname">Hostname</string>
    <string name="settings_port">Port</string>
    <string name="settings_cat_credentials">Credentials</string>
    <string name="settings_credentials">Credentials</string>
    <string name="settings_username">Username</string>
    <string name="settings_password">Password</string>
    <string name="settings_domain">Domain</string>
    <string name="settings_cat_settings">Settings</string>
    <string name="settings_screen">Screen</string>
    <string name="settings_cat_screen">Screen Settings</string>
    <string name="settings_cat_scale">Scale Settings</string>
    <string name="settings_colors">Colors</string>
    <string-array name="colors_array">
        <item>Palette (8 Bit)</item>
        <item>High Color (15 Bit)</item>
        <item>High Color (16 Bit)</item>
        <item>True Color (24 Bit)</item>
        <item>Highest Quality (32 Bit)</item>
    </string-array>
    <string-array name="colors_values_array" translatable="false">
        <item>8</item>
        <item>15</item>
        <item>16</item>
        <item>24</item>
        <item>32</item>
    </string-array>
    <string name="settings_resolution">Resolution</string>
    <string name="resolution_automatic">Automatic</string>
    <string name="resolution_fit">Fit screen</string>
    <string name="resolution_custom">Custom</string>
    <string-array name="resolutions_array">
        <item>Automatic</item>
        <item>Fit Screen</item>
        <item>Custom</item>
        <item>640x480</item>
        <item>720x480</item>
        <item>800x600</item>
        <item>1024x768</item>
        <item>1280x1024</item>
        <item>1440x900</item>
        <item>1920x1080</item>
        <item>1920x1200</item>
    </string-array>
    <string-array name="resolutions_values_array" translatable="false">
        <item>automatic</item>
        <item>fitscreen</item>
        <item>custom</item>
        <item>640x480</item>
        <item>720x480</item>
        <item>800x600</item>
        <item>1024x768</item>
        <item>1280x1024</item>
        <item>1440x900</item>
        <item>1920x1080</item>
        <item>1920x1200</item>
    </string-array>
    <string name="settings_width">Width</string>
    <string name="settings_height">Height</string>
    <string name="settings_scale">Scale</string>
    <string name="settings_scale_desktop">Desktop Scale</string>
    <string name="settings_scale_device">Device Scale</string>
    <string-array name="scale_mode_array">
        <item>100%</item>
        <item>140%</item>
        <item>180%</item>
        <item>Custom</item>
    </string-array>
    <string-array name="scale_mode_values_array" translatable="false">
        <item>100</item>
        <item>140</item>
        <item>180</item>
        <item>custom</item>
    </string-array>
    <string-array name="scale_device_array">
        <item>100%</item>
        <item>140%</item>
        <item>180%</item>
    </string-array>
    <string-array name="scale_device_values_array" translatable="false">
        <item>100</item>
        <item>140</item>
        <item>180</item>
    </string-array>
    <string name="settings_performance">Performance</string>
    <string name="settings_cat_performance">Performance Settings</string>
    <string name="settings_perf_remotefx">RemoteFX</string>
    <string name="settings_perf_gfx" translatable="false">GFX</string>
    <string name="settings_perf_gfx_h264" translatable="false">H264</string>
    <string name="settings_perf_wallpaper">Desktop Background</string>
    <string name="settings_perf_font_smoothing">Font Smoothing</string>
    <string name="settings_perf_desktop_composition">Desktop Composition</string>
    <string name="settings_perf_full_window_drag">Window contents while dragging</string>
    <string name="settings_perf_menu_animation">Menu Animation</string>
    <string name="settings_perf_theming">Visual Styles</string>
    <string name="settings_advanced">Advanced</string>
    <string name="settings_cat_advanced">Advanced Settings</string>
    <string name="settings_tlsSecLevel">TLS Security Level</string>
    <string name="settings_tlsMinLevel">Required TLS Version</string>
    <string name="settings_cat_gateway">Gateway</string>
    <string name="settings_enable_gateway_settings">Enable Gateway</string>
    <string name="settings_gateway_settings">Gateway Settings</string>
    <string name="settings_redirect_sdcard">Redirect SD card</string>
    <string name="settings_redirect_sound">Redirect Sound</string>
    <string-array name="tlsSecLevel_array">
        <item>Use default</item>
        <item>everything permitted</item>
        <item>80 bits</item>
        <item>112 bits</item>
        <item>128 bits</item>
        <item>192 bits</item>
        <item>256 bits</item>
    </string-array>
    <string-array name="tlsSecLevel_values_array" translatable="false">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="tlsMinLevel_array">
        <item>Use default</item>
        <item>TLS 1.0</item>
        <item>TLS 1.1</item>
        <item>TLS 1.2</item>
        <item>TLS 1.3</item>
    </string-array>
    <string-array name="tlsMinLevel_values_array" translatable="false">
        <item>-1</item>
        <item>0x0301</item>
        <item>0x0302</item>
        <item>0x0303</item>
        <item>0x0304</item>
    </string-array>
    <string-array name="redirect_sound_array">
        <item>Do not play</item>
        <item>Play on Server</item>
        <item>Play on Device</item>
    </string-array>
    <string-array name="redirect_sound_values_array" translatable="false">
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>
    <string name="settings_redirect_microphone">Redirect Microphone</string>
    <string name="settings_redirect_printer">Redirect Printer</string>
    <string name="settings_security">Security</string>
    <string-array name="security_array">
        <item>Automatic</item>
        <item>RDP</item>
        <item>TLS</item>
        <item>NLA</item>
    </string-array>
    <string-array name="security_values_array" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="settings_remote_program">Remote Program</string>
    <string name="settings_work_dir">Working Directory</string>
    <string name="settings_async_channel">Async channel</string>
    <string name="settings_async_update">Async update</string>
    <string name="settings_console_mode">Console Mode</string>
    <string name="settings_cat_hyperv">Hyper-V</string>
    <string name="settings_cat_redirection">Redirection</string>
    <string name="settings_cat_session">Session</string>
    <string name="settings_vmconnect_mode">Hyper-V Console (vmconnect)</string>
    <string name="settings_vmconnect_guid">VM ID (GUID)</string>
    <string name="settings_password_present">*******</string>
    <string name="settings_password_empty">not set</string>
    <string name="settings_cat_ui">User Interface</string>
    <string name="settings_ui_hide_status_bar">Hide Status Bar</string>
    <string name="settings_ui_hide_navigation_bar">Hide Navigation Bar</string>
    <string name="settings_ui_hide_action_bar">Hide Action Bar</string>
    <string name="settings_ui_hide_zoom_controls">Hide Zoom Controls</string>
    <string name="settings_ui_swap_mouse_buttons">Swap Mouse Buttons</string>
    <string name="settings_ui_invert_scrolling">Invert Scrolling</string>
    <string name="settings_ui_auto_scroll_touchpointer">Touch Pointer Auto Scroll</string>
    <string name="settings_ui_ask_on_exit">Show Dialog on Exit</string>
    <string name="settings_ui_use_back_as_altf4">Use \"back\" button as Alt+F4</string>
    <string name="settings_cat_power">Power Saving</string>
    <string name="settings_cat_client">Client</string>
    <string name="settings_power_disconnect_timeout">Close idle Connections</string>
    <string name="settings_power_keep_screen_on_when_connected">Keep screen on when connected</string>
    <string name="settings_cat_security">Security</string>
    <string name="settings_security_accept_certificates">Accept all Certificates</string>
    <string name="settings_security_clear_certificate_cache">Clear Certificate Cache</string>
    <string name="settings_description_after_minutes">After %1$d Minutes</string>
    <string name="settings_description_disabled">Disabled</string>
    <string name="settings_debug">Debug Settings</string>
    <string name="preference_key_ui_hide_status_bar" translatable="false">ui.hide_status_bar</string>
    <string name="preference_key_ui_hide_navigation_bar" translatable="false">ui.hide_navigation_bar</string>
    <string name="preference_key_ui_ask_on_exit" translatable="false">ui.ask_on_exit</string>
    <string name="preference_key_ui_auto_scroll_touchpointer" translatable="false">ui.auto_scroll_touchpointer</string>
    <string name="preference_key_ui_invert_scrolling" translatable="false">ui.invert_scrolling</string>
    <string name="preference_key_ui_swap_mouse_buttons" translatable="false">ui.swap_mouse_buttons</string>
    <string name="preference_key_ui_use_back_as_altf4" translatable="false">ui.use_back_as_altf4</string>
    <string name="preference_key_ui_fit_rounded_corners" translatable="false">ui.fit_rounded_corners</string>
    <string name="settings_ui_fit_rounded_corners">Fit to Rounded Corners</string>
    <string name="pref_key_theme" translatable="false">ui.theme</string>
    <string name="pref_title_theme">App Theme</string>
    <string name="settings_loadBalanceInfo">LoadBalanceInfo</string>
</resources>