<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="auto"
        android:entries="@array/pref_theme_entries"
        android:entryValues="@array/pref_theme_values"
        android:key="@string/pref_key_theme"
        android:title="@string/pref_title_theme" />
    <CheckBoxPreference
        android:key="@string/preference_key_ui_hide_status_bar"
        android:title="@string/settings_ui_hide_status_bar" />
    <CheckBoxPreference
        android:key="@string/preference_key_ui_hide_navigation_bar"
        android:title="@string/settings_ui_hide_navigation_bar" />
    <CheckBoxPreference
        android:key="@string/preference_key_ui_swap_mouse_buttons"
        android:title="@string/settings_ui_swap_mouse_buttons" />
    <CheckBoxPreference
        android:key="@string/preference_key_ui_invert_scrolling"
        android:title="@string/settings_ui_invert_scrolling" />
    <CheckBoxPreference
        android:key="@string/preference_key_ui_auto_scroll_touchpointer"
        android:title="@string/settings_ui_auto_scroll_touchpointer" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/preference_key_ui_ask_on_exit"
        android:title="@string/settings_ui_ask_on_exit" />
    <CheckBoxPreference
        android:key="@string/preference_key_ui_fit_rounded_corners"
        android:title="@string/settings_ui_fit_rounded_corners" />
    <CheckBoxPreference
        android:key="@string/preference_key_ui_use_back_as_altf4"
        android:title="@string/settings_ui_use_back_as_altf4" />
    <Preference
        android:title="@string/pref_title_keyboard_accessibility"
        android:summary="@string/pref_summary_keyboard_accessibility">
        <intent android:action="android.settings.ACCESSIBILITY_SETTINGS" />
    </Preference>
</PreferenceScreen>
