<?xml version="1.0" encoding="utf-8"?><!--
/*
   Advanced Bookmark Settings Layout

   Copyright 2013 Thincast Technologies GmbH, Author: Martin Fleisz

   This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
   If a copy of the MPL was not distributed with this file, You can obtain one at http://mozilla.org/MPL/2.0/.
*/
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_cat_gateway">

        <SwitchPreferenceCompat
            android:key="bookmark.enable_gateway_settings"
            android:title="@string/settings_enable_gateway_settings" />

        <Preference
            android:key="bookmark.gateway_settings"
            android:title="@string/settings_gateway_settings"
            app:fragment="com.freerdp.freerdpcore.presentation.BookmarkActivity$GatewayFragment" />

        <EditTextPreference
            android:key="bookmark.loadBalanceInfo"
            android:singleLine="true"
            android:title="@string/settings_loadBalanceInfo"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_cat_security">

        <com.freerdp.freerdpcore.utils.IntListPreference
            android:entries="@array/security_array"
            android:entryValues="@array/security_values_array"
            android:key="bookmark.security"
            android:title="@string/settings_security"
            app:useSimpleSummaryProvider="true" />

        <com.freerdp.freerdpcore.utils.IntListPreference
            android:entries="@array/tlsSecLevel_array"
            android:entryValues="@array/tlsSecLevel_values_array"
            android:key="bookmark.tlsSecLevel"
            android:title="@string/settings_tlsSecLevel"
            app:useSimpleSummaryProvider="true" />

        <com.freerdp.freerdpcore.utils.IntListPreference
            android:entries="@array/tlsMinLevel_array"
            android:entryValues="@array/tlsMinLevel_values_array"
            android:key="bookmark.tlsMinLevel"
            android:title="@string/settings_tlsMinLevel"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_cat_redirection">

        <CheckBoxPreference
            android:key="bookmark.redirect_sdcard"
            android:title="@string/settings_redirect_sdcard" />

        <com.freerdp.freerdpcore.utils.IntListPreference
            android:entries="@array/redirect_sound_array"
            android:entryValues="@array/redirect_sound_values_array"
            android:key="bookmark.redirect_sound"
            android:title="@string/settings_redirect_sound"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            android:key="bookmark.redirect_microphone"
            android:title="@string/settings_redirect_microphone" />

        <CheckBoxPreference
            android:key="bookmark.redirect_printer"
            android:title="@string/settings_redirect_printer" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_cat_session">

        <EditTextPreference
            android:key="bookmark.remote_program"
            android:singleLine="true"
            android:title="@string/settings_remote_program"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="bookmark.work_dir"
            android:singleLine="true"
            android:title="@string/settings_work_dir"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            android:key="bookmark.console_mode"
            android:title="@string/settings_console_mode" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_cat_hyperv">

        <SwitchPreferenceCompat
            android:key="bookmark.vmconnect_mode"
            android:title="@string/settings_vmconnect_mode" />

        <EditTextPreference
            android:key="bookmark.vmconnect_guid"
            android:singleLine="true"
            android:title="@string/settings_vmconnect_guid"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
