<?xml version="1.0" encoding="utf-8"?><!--
/*
   Bookmark Screen Settings Layout

   Copyright 2013 Thincast Technologies GmbH, Author: Martin Fleisz

   This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
   If a copy of the MPL was not distributed with this file, You can obtain one at http://mozilla.org/MPL/2.0/.
*/
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:freerdp="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/settings_cat_screen">
        <com.freerdp.freerdpcore.utils.IntListPreference
            android:entries="@array/colors_array"
            android:entryValues="@array/colors_values_array"
            android:key="bookmark.colors"
            android:title="@string/settings_colors"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:entries="@array/resolutions_array"
            android:entryValues="@array/resolutions_values_array"
            android:key="bookmark.resolution"
            android:title="@string/settings_resolution" />
            <!-- app:useSimpleSummaryProvider="true"  -->
        <com.freerdp.freerdpcore.utils.IntEditTextPreference
            android:key="bookmark.width"
            android:title="@string/settings_width"
            android:singleLine="true"
            freerdp:bounds_default="640"
            freerdp:bounds_max="65536"
            freerdp:bounds_min="640"
            app:useSimpleSummaryProvider="true" />
        <com.freerdp.freerdpcore.utils.IntEditTextPreference
            android:key="bookmark.height"
            android:title="@string/settings_height"
            android:singleLine="true"
            freerdp:bounds_default="480"
            freerdp:bounds_max="65536"
            freerdp:bounds_min="480"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_cat_scale">
        <ListPreference
            android:entries="@array/scale_mode_array"
            android:entryValues="@array/scale_mode_values_array"
            android:key="bookmark.scale_mode"
            android:title="@string/settings_scale"
            app:useSimpleSummaryProvider="true" />
        <com.freerdp.freerdpcore.utils.IntEditTextPreference
            android:key="bookmark.scale_desktop"
            android:title="@string/settings_scale_desktop"
            android:singleLine="true"
            freerdp:bounds_default="100"
            freerdp:bounds_max="500"
            freerdp:bounds_min="100"
            app:useSimpleSummaryProvider="true" />
        <com.freerdp.freerdpcore.utils.IntListPreference
            android:entries="@array/scale_device_array"
            android:entryValues="@array/scale_device_values_array"
            android:key="bookmark.scale_device"
            android:title="@string/settings_scale_device"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
