<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/newBookmark"
        android:icon="@drawable/icon_menu_add"
        android:showAsAction="ifRoom"
        android:title="@string/menu_new_bookmark" />
    <item
        android:id="@+id/appSettings"
        android:icon="@drawable/icon_menu_settings"
        android:showAsAction="ifRoom"
        android:title="@string/menu_app_settings" />
    <item
        android:id="@+id/help"
        android:icon="@drawable/icon_menu_help"
        android:showAsAction="ifRoom"
        android:title="@string/menu_help" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/icon_menu_about"
        android:showAsAction="ifRoom"
        android:title="@string/menu_about" />
</menu>
