<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<!-- 
	<item android:id="@+id/session_touch_pointer"
		  android:title="@string/pointer"
		  android:icon="@drawable/icon_zoom_in"
		  android:showAsAction="ifRoom"
	/>
	 -->
	<item android:id="@+id/session_touch_pointer"
		  android:title="@string/menu_touch_pointer"
		  android:icon="@drawable/icon_menu_touch_pointer"
		  android:showAsAction="ifRoom"
	/>
	<item android:id="@+id/session_sys_keyboard"
		  android:title="@string/menu_sys_keyboard"
		  android:icon="@drawable/icon_menu_sys_keyboard"
		  android:showAsAction="ifRoom"
	/>
	<item android:id="@+id/session_ext_keyboard"
		  android:title="@string/menu_ext_keyboard"
		  android:icon="@drawable/icon_menu_ext_keyboard"
		  android:showAsAction="ifRoom"
	/>
	<item android:id="@+id/session_disconnect"
		  android:title="@string/menu_disconnect"
		  android:icon="@drawable/icon_menu_disconnect"
		  android:showAsAction="ifRoom"
	/>
</menu>
