<?xml version="1.0" encoding="utf-8"?><!--
/*
   Bookmark 3G Screen Settings Layout

   Copyright 2013 Thincast Technologies GmbH, Author: Martin Fleisz

   This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0. 
   If a copy of the MPL was not distributed with this file, You can obtain one at http://mozilla.org/MPL/2.0/.
*/
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:freerdp="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/settings_cat_screen">
        <com.freerdp.freerdpcore.utils.IntListPreference
            android:entries="@array/colors_array"
            android:entryValues="@array/colors_values_array"
            android:key="bookmark.colors_3g"
            android:summary="Color depth"
            android:title="@string/settings_colors" />
        <ListPreference
            android:entries="@array/resolutions_array"
            android:entryValues="@array/resolutions_values_array"
            android:key="bookmark.resolution_3g"
            android:summary="XXX"
            android:title="@string/settings_resolution" />
        <com.freerdp.freerdpcore.utils.IntEditTextPreference
            android:key="bookmark.width_3g"
            android:singleLine="true"
            android:title="@string/settings_width"
            freerdp:bounds_default="640"
            freerdp:bounds_max="65536"
            freerdp:bounds_min="640" />
        <com.freerdp.freerdpcore.utils.IntEditTextPreference
            android:key="bookmark.height_3g"
            android:singleLine="true"
            android:title="@string/settings_height"
            freerdp:bounds_default="480"
            freerdp:bounds_max="65536"
            freerdp:bounds_min="480" />
    </PreferenceCategory>
</PreferenceScreen>
